--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -382,7 +382,7 @@ hr {
 
 .hero {
     width: 100%;
-    height: 40vh;
+    min-height: 30vh;
     background-position: center;    
     background-repeat: no-repeat;
     background-size: cover;
