--- a/aaron.washington/css/storetheme.css
+++ b/aaron.washington/css/storetheme.css
@@ -77,6 +77,7 @@ body {
             color: var(--color-primary-dark);
             border-radius: 0.5rem;
             padding: 2rem;
+            text-align: center;
             transform: translateY(2rem);
             transition: all 0.3s ease-in-out;
         }
