--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -233,7 +233,7 @@ hr {
     padding: 0.75rem 2rem;
     margin: 0;
     background-color: var(--color-primary-light);
-    /*box-shadow: 0px 0px 8px 0px #202124;*/
+    box-shadow: 0px 0px 8px 0px #202124;
 }   
 
     .navbar a h3 {
