--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -272,7 +272,8 @@ hr {
 
 
 .nav ul li.active {
-    background-color: var(--color-neutral-light) !important;
+    /*background-color: var(--color-neutral-light) !important;*/
+    border-bottom: 2px solid var(--color-neutral-medium);
     color: inherit;
 }
 
