--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -217,6 +217,10 @@ hr {
     display: none;
 }
 
+.text-left {
+    text-align: left !important;
+}
+
 .text-center {
     text-align: center !important;
 }
@@ -272,10 +276,14 @@ hr {
 
 
 .nav ul li.active {
-    /*background-color: var(--color-neutral-light) !important;*/
-    border-bottom: 1px solid var(--color-neutral-medium);
+    border-bottom: 1.5px solid var(--color-neutral-medium);
     color: inherit;
 }
+
+    .nav ul li a:hover {
+        text-decoration: none;
+        background-color: var(--color-neutral-light) !important;
+    }
 
 
 #navigation .card-light {
@@ -978,11 +986,12 @@ hr {
     list-style-type: none;
     text-align: left;
     margin-left: 0;
+    margin-top: 0;
     padding-left: 0;
 }
 
 .cart-total ul li {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .cart-total h3 {
