--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -280,7 +280,7 @@ hr {
     color: inherit;
 }
 
-    .nav ul li a:hover {
+    .nav-crumbs ul li a:hover {
         text-decoration: none;
         background-color: var(--color-neutral-light) !important;
     }
@@ -346,7 +346,7 @@ hr {
     .nav-crumbs ul li:hover a {
         color: var(--color-primary-dark) !important;
         background-color: transparent !important;
-        text-decoration: underline !important;
+        text-decoration: underline;
     }
 
 
