--- a/aaron.washington/css/storetheme.css
+++ b/aaron.washington/css/storetheme.css
@@ -46,11 +46,13 @@ body {
     position: relative;
     overflow: hidden;
     box-shadow: 0 0 0 rgba(0,0,0,0);
-    transition: all 0.3s ease-in-out;
+    transition: all 0.25s ease-in-out;
+    transform: translateY(0);
 }
 
     .product-overlay:hover {
-        box-shadow: 0 4px 7px rgba(0,0,0,0.2);
+        box-shadow: 0 8px 10px rgba(0,0,0,0.3);
+        transform: translateY(-0.75rem);
     }
 
     .product-overlay figcaption {
@@ -59,9 +61,9 @@ body {
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(0,0,0,0.5);
+        background-color: rgba(255,255,255,0.5);
         opacity: 0;
-        transition: all 0.3s ease-in-out;
+        transition: all 0.25s ease-in-out;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -74,12 +76,12 @@ body {
 
         .product-overlay .caption-body {
             text-align: center;
-            background-color: #fff;
+            /*background-color: #fff;*/
             color: var(--color-primary-dark);
             border-radius: 0.5rem;
             padding: 2rem;
-            transform: translateY(2rem);
-            transition: all 0.3s ease-in-out;
+            transform: translateY(1rem);
+            transition: all 0.25s ease-in-out;
         }
 
             .product-overlay:hover .caption-body {
