--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -276,8 +276,8 @@ hr {
 
 
 .nav ul li.active {
-    border-bottom: 1.5px solid var(--color-neutral-medium);
-    color: inherit;
+    /*border-bottom: 1px solid var(--color-primary-dark);*/
+    color: var(--color-accent-red-medium);
 }
 
     .nav-crumbs ul li a:hover {
@@ -349,9 +349,9 @@ hr {
 }
 
     .nav-crumbs ul li:hover a {
-        color: var(--color-primary-dark) !important;
+        color: var(--color-neutral-light) !important;
         background-color: transparent !important;
-        text-decoration: underline;
+        text-decoration: none;
     }
 
 
