--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -275,7 +275,7 @@ hr {
     }
 
 
-.nav ul li.active {
+.nav ul li.active a {
     /*border-bottom: 1px solid var(--color-primary-dark);*/
     color: var(--color-accent-red-medium);
 }
@@ -344,8 +344,8 @@ hr {
 }
 
 .nav-crumbs ul li {
-    color: var(--color-primary-dark) !important;
-    background-color: transparent !important;
+    color: var(--color-primary-dark);
+    background-color: transparent;
 }
 
     .nav-crumbs ul li:hover a {
