--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -1013,6 +1013,9 @@ footer {
     padding: 1rem 2rem;
     margin: 0;
     background-color: var(--color-primary-dark);
+    position: absolute;
+    bottom: 0;
+    left: 0;
 } 
 
     footer .nav ul {
