--- a/song.summer/css/style.css
+++ b/song.summer/css/style.css
@@ -217,7 +217,6 @@ figcaption {
 .main_nav2 {
     list-style-type: none;
     margin: 0;
-    padding: 10;
     overflow: hidden;
     background-color: #333;
     display: flex;
@@ -277,6 +276,7 @@ div.cnt23 section{
     display: flex;
     justify-content: space-around;
     background-color: white;
+    padding: 20px;
 }
 div.cnt23 section article{
     width: calc(25% - 20px);
@@ -325,6 +325,21 @@ div.cnt23 .i1{background-image: url(../img/top.png);}
 div.cnt23 .i2{background-image: url(../img/leggings.png);}
 div.cnt23 .i3{background-image: url(../img/outer.png);}
 div.cnt23 .i4{background-image: url(../img/swimwear.png);}
+
+div.cnt23 .i12{background-image: url(../img/1_overfit.png);}
+div.cnt23 .i13{background-image: url(../img/2_intention_bratop.png);}
+div.cnt23 .i14{background-image: url(../img/3_alldaycrop.png);}
+div.cnt23 .i15{background-image: url(../img/4_twistcrop.png);}
+
+div.cnt23 .i16{background-image: url(../img/5_grey_leggins.png);}
+div.cnt23 .i17{background-image: url(../img/6_bootscut.png);}
+div.cnt23 .i18{background-image: url(../img/7_lettering_pants.png);}
+div.cnt23 .i19{background-image: url(../img/8_jogger_pants.png);}
+
+div.cnt23 .i20{background-image: url(../img/9_padding.png);}
+div.cnt23 .i21{background-image: url(../img/10_jumper.png);}
+div.cnt23 .i22{background-image: url(../img/11_windbeaker.png);}
+div.cnt23 .i23{background-image: url(../img/12_Highneck_zip.png);}
 
 .sale_flyer{
     height: 480px;
