--- a/song.summer/styleguide/css/style.css
+++ b/song.summer/styleguide/css/style.css
@@ -210,6 +210,15 @@ figcaption {
     font-size: 0.9em;
 }
 
+.more_products{
+    padding-right: 30px;
+    color: var(--color-neutral-dark);
+    text-align: center;
+    font-weight: 300;
+    text-decoration-line: underline;
+    font-size: 1.5em;
+}
+
 #main_nav {
     position: relative;
 }
