connected database to site

--- a/chipman.abigail/css/abdztheme.css
+++ b/chipman.abigail/css/abdztheme.css
@@ -149,6 +149,7 @@ hr {
   border-radius: 0.5em;
   box-shadow: 0 2px 5px hsla(308, 77%, 46%, 0.096);
   overflow: hidden;
+  height: 100%;
 }
 .figure.product a {
   text-decoration: none;
@@ -258,6 +259,18 @@ hr {
     transform: none;
     padding: 0;
   }
+}
+
+.image-main img {
+  width: 100%;
+  height: 40vh;
+  object-fit: contain;
+}
+
+.image-thumb img {
+  width: 8em;
+  height: 6em;
+  object-fit: contain;
 }
 
 /* COLOR CHIP */
