--- a/aaron.washington/css/storetheme.css
+++ b/aaron.washington/css/storetheme.css
@@ -100,6 +100,19 @@ body {
 
 
 
+.images-main img {
+    width: 100%;
+    height: 40vh;
+    object-fit: contain;
+}
+
+.images-thumbs img {
+    width: 7rem;
+    height: 5rem;
+    object-fit: contain;
+}
+
+
 #grid .card-light .title,
 #forms .card-light,
 #notify .card-light {
