--- a/aaron.washington/css/storetheme.css
+++ b/aaron.washington/css/storetheme.css
@@ -102,15 +102,19 @@ body {
 
 .images-main img {
     width: 100%;
-    height: 40vh;
+    height: 55vh;
     object-fit: contain;
 }
 
-.images-thumbs img {
-    width: 7rem;
-    height: 5rem;
-    object-fit: contain;
+.images-thumbs {
+    margin-top: 0.5rem;
 }
+
+    .images-thumbs img {
+        width: 8rem;
+        height: 8rem;
+        object-fit: contain;
+    }
 
 
 #grid .card-light .title,
