--- a/aaron.washington/css/storetheme.css
+++ b/aaron.washington/css/storetheme.css
@@ -117,6 +117,13 @@ body {
     }
 
 
+.images-cart img {
+    width: 100%;
+    height: 8rem;
+    object-fit: contain;
+}
+
+
 #grid .card-light .title,
 #forms .card-light,
 #notify .card-light {
