--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -983,9 +983,9 @@ hr {
     padding-left: 2em;
 }
 
-    .cart-item img {
+    /*.cart-item img {
         max-width: 75px;
-    }
+    }*/
 
 
 .cart-total ul {
