--- a/song.summer/css/gridsystem.css
+++ b/song.summer/css/gridsystem.css
@@ -229,3 +229,18 @@
 	background-color: lightgrey;
 	padding:15px;
 }
+
+
+.images-main img{
+  width: 100%;
+  height: 40vh;
+  object-fit: contain;
+}
+
+.images-thumbs img{
+  width: 8em;
+  height: 6em;
+  object-fit: contain;
+  display: inline;
+
+}
