--- a/song.summer/css/storetheme.css
+++ b/song.summer/css/storetheme.css
@@ -41,6 +41,15 @@
     
 }
 
+.card-section{
+    padding:1em;
+}
+
+.card-section~.card-section{
+    border-top: 1px solid var(--color-neutral-light);
+}
+
+
 #card-group:hover {
     transform: scale(1.2)
 }
@@ -151,22 +160,25 @@
 .figure img {
     width: 100%;
     vertical-align: text-bottom;
+    height: 286px;
 }
 
 .figure figcaption {
     padding: 1em;
 }
 
-.figure.product {
+/* .figure.product {
     border-radius: 0.5em;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-}
+} */
 
 .figure.product {
     border-radius: 0.4em;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     overflow:hidden;
+    width: 100%;
+    transition: all 0.3s;
 }
 
 
@@ -212,6 +224,15 @@
 
     .product-overlay:hover img{
         transform:scale();
+    }
+
+    .productlist a{
+        text-decoration: none;
+        font-weight: lighter;
+    }
+
+    .product.figure:hover{
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
     }
 
 @media (max-width:600px) {
@@ -311,20 +332,24 @@
     background-color: var(--color-neutral-light);
     border-radius: 0.3em;
     cursor: pointer;
+    width: 100%;
+    margin-top: 0.5em;
+    
 }
 
 .form-select {
     position: relative;
+   
 }
 
 .form-select::after {
-    content'▾';
+    /* content:'▾'; */
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2em;
     position: absolute;
     top: 50%;
     right: 0.5em;
-    tranform: translateY(-50%);
+    transform: translateY(-50%);
     pointer-events: none;
     color: var(--color-neutral-medium);
 }
@@ -385,7 +410,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    width: 200px;
+    width: 100%;
     height: 50px;
 }
 .button1 {
@@ -397,7 +422,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    width: 200px;
+    width: 100%;
     height: 50px;
   }
 
@@ -410,7 +435,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    width: 200px;
+    width: 100%;
     height: 50px;
   }
 
@@ -436,6 +461,7 @@
   figcaption{
       font-size: 1em;
       text-align: left;
+      color: #000000;
   }
 
 .hotdog_dark{
