--- a/aaron.washington/css/storetheme.css
+++ b/aaron.washington/css/storetheme.css
@@ -156,6 +156,15 @@ body {
 }
 
 
+span.badge:not(:empty)::before {
+    content: '(';
+}
+
+span.badge:not(:empty)::after {
+    content: ')';
+}
+
+
 
 
 
