--- a/chipman.abigail/css/abdztheme.css
+++ b/chipman.abigail/css/abdztheme.css
@@ -48,13 +48,27 @@ h6 {
   font-style: italic;
   color: var(--color-accent-dark);
 }
+
 @media (max-width: 800px) {
   .container {
-    padding-left: 1em;
-    padding-right: 1em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
   }
   .navbar h1 {
     padding-left: 0.5em;
+  }
+  .view-window-small {
+    height: 20vh;
+  }
+  .view-window {
+    height: 50vh;
+    position: relative;
+    overflow: hidden;
+    background-position: center;
+  }
+  .view-window img {
+    max-width:100%;
+    height:auto;
   }
 }
 a:hover {
@@ -62,16 +76,70 @@ a:hover {
 }
 
 @media (max-width: 400px) {
+  body {
+    background: var(--color-main-dark);
+  }
   .navbar .display-flex {
     display: block;
   }
   .navbar .nav li {
     line-height: 1em;
   }
-  .nav-search {
-    display: none;
+  .product-overlay figcaption {
+    position: relative;
+    display: block;
+    top: initial;
+    left: initial;
+    width: 100%;
+    height: initial;
+    background-color: initial;
+    opacity: 1;
+  }
+  .product-overlay .caption-body {
+    transform: none;
+    padding: 0;
+  }
+
+  .logo {
+    position: center;
+  }
+
+  .view-window {
+    height: 30vh;
+    position: relative;
+    overflow: hidden;
+  }
+  .view-window img {
+    max-width:100%;
+    height:auto;
+  }
+
+  .view-window-small {
+    height: 15vh;
+    position: relative;
+    overflow: hidden;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+  .card.section {
+    height: 75%;
+    padding: 0.25em;
+    margin-top: 0.25em;
+    margin-bottom: 0.25em;
+    border-radius: 0.5em;
+    opacity: 0.8;
+  }
+  .card.section a {
+    text-decoration: none;
+  }
+  .card.section h2 {
+    font-size: 1.75em;
+    font-weight: bold;
+    text-align: right;
+    padding-right: 0.25em;
   }
 }
+
 .page-head {
   color: var(--color-main-dark);
 }
@@ -246,23 +314,6 @@ hr {
   text-decoration: none;
 }
 
-@media (max-width: 400px) {
-  .product-overlay figcaption {
-    position: relative;
-    display: block;
-    top: initial;
-    left: initial;
-    width: 100%;
-    height: initial;
-    background-color: initial;
-    opacity: 1;
-  }
-  .product-overlay .caption-body {
-    transform: none;
-    padding: 0;
-  }
-}
-
 .image-main img {
   width: 100%;
   height: 40vh;
@@ -276,7 +327,7 @@ hr {
 }
 
 .cart-thumb img {
-  padding-right: .5em;
+  padding-right: 0.5em;
 }
 
 /* COLOR CHIP */
@@ -347,9 +398,8 @@ hr {
 }
 
 span.badge:not(:empty) {
-  background-color:var(--color-accent-medium);
-  color:var(--color-main-dark);
+  background-color: var(--color-accent-medium);
+  color: var(--color-main-dark);
   border-radius: 2em;
-  padding:0.25em;
+  padding: 0.25em;
 }
-
