--- a/song.summer/css/storetheme.css
+++ b/song.summer/css/storetheme.css
@@ -256,6 +256,7 @@
 
 /* forms */
 
+.form-select > select,
 .hotdog,
 .hotdog input,
 .form-input,
@@ -330,7 +331,7 @@
 }
 
 .hotdog.light {
-    background-color: var(--color-white);
+    /* background-color: var(--color-white); */
     color: var(--color-white);
 }
 
