--- a/song.summer/css/gridsystem.css
+++ b/song.summer/css/gridsystem.css
@@ -215,7 +215,8 @@
 .footer {
   grid-area: footer;
   color: white;
-  background-color: #555;
+  background-color: rgb(185, 185, 185);
+  text-align: center;
 }
 
 .grid-container > div {
