--- a/aaron.washington/css/storetheme.css
+++ b/aaron.washington/css/storetheme.css
@@ -45,6 +45,7 @@ body {
 .product-overlay {
     position: relative;
     overflow: hidden;
+    border: 1px solid var(--color-neutral-light);
     box-shadow: 0 0 0 rgba(0,0,0,0);
     transition: all 0.25s ease-in-out;
     transform: translateY(0);
