--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -234,6 +234,9 @@ hr {
 /** NAVBAR **/
 
 .navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
     padding: 0.75rem 2rem;
     margin: 0;
     background-color: var(--color-primary-light);
@@ -579,6 +582,11 @@ hr {
 
 .card-bg-4 {
     background-image: url('../../img/AW-landing-shop_kids.jpg');
+}
+
+/* Any element that has inside of it a class of "col-", the immediate "card" child of that has... */
+[class*='col-']>.card {
+    height: 100%;
 }
 
 
