--- a/chipman.abigail/lib/css/styleguide.css
+++ b/chipman.abigail/lib/css/styleguide.css
@@ -102,6 +102,10 @@ a:hover {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 /* SMALL CLASSES */
 
 .media-image {
@@ -112,6 +116,8 @@ a:hover {
 .hidden {
   display: none;
 }
+
+
 
 /* COMPONENT CLASSES */
 
