--- a/aaron.washington/lib/css/styleguide.css
+++ b/aaron.washington/lib/css/styleguide.css
@@ -199,6 +199,14 @@ hr {
     flex-basis: 0;
 }
 
+.flex-column {
+    flex-direction: column;
+}
+
+.flex-wrap {
+    flex-direction: wrap;
+}
+
 .grid img {
     max-height: 70vh;
     max-width: 100%;
@@ -1002,7 +1010,7 @@ hr {
 
 .cart-item {
     text-align: left;
-    padding-left: 2em;
+    padding-left: 1.5em;
 }
 
     /*.cart-item img {
