--- a/song.summer/css/storetheme.css
+++ b/song.summer/css/storetheme.css
@@ -29,6 +29,16 @@
 .card.flat {
     padding: 0;
 }
+/* 
+[class*='col-']>.card{
+    height: 100%;
+    margin: 0;
+} */
+
+.grid-card {
+    height: 100%;
+    margin: 0;
+}
 
 #card-group {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
@@ -158,9 +168,10 @@
 }
 
 .figure img {
-    height: 100%;
+    height: 300px;
+    width: 100%;
     vertical-align: text-bottom;
-    height: 286px;
+    
 }
 
 .figure figcaption {
@@ -174,7 +185,7 @@
 } */
 
 .figure.product {
-    border-radius: 0.4em;
+    border-radius: 0.1em;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     overflow:hidden;
     width: 100%;
@@ -297,7 +308,7 @@
 
 .form-button {
     background-color: var(--color-neutral-light);
-    border-radius: 0.2em;
+    border-radius: 0.1em;
     cursor: pointer;
     text-align: center;
     padding: 0.5em 1em;
@@ -336,12 +347,12 @@
 }
 
 .form-select>select {
-    padding: 0.5em 1em;
+    padding: 0.5em 0.1em;
     background-color: var(--color-neutral-light);
-    border-radius: 0.3em;
+    border-radius: 0.1em;
     cursor: pointer;
     width: 100%;
-    margin-top: 0.5em;
+    text-align: center;
     
 }
 
@@ -516,3 +527,6 @@ span.badge:not(:empty)::after {
     content: "";
   }
 
+/* .details{
+    width: 451px !important;
+} */
