--- a/song.summer/css/style.css
+++ b/song.summer/css/style.css
@@ -85,6 +85,8 @@ li:hover {
 
 .flex-column {flex-direction: column;}
 
+.flex-wram {flex-wrap:wrap; }
+
 /* COMPONENT CLASSES */
 
 .nav ul {
@@ -185,7 +187,7 @@ li:hover {
     color: whitesmoke;
     line-height: var(--header-height);
     text-align: center;
-    font-size: 4em;
+    
 }
 
 .navbar h1 {
@@ -201,6 +203,56 @@ li:hover {
 figcaption {
     font-size: 1em;
     text-align: left;
+}
+
+@media (max-width: 800px) {
+    .container {
+      padding-left: 1em;
+      padding-right: 1em;
+    }
+    .navbar h1 {
+      padding-left: 0.5em;
+    }
+  }
+  
+  .menu-button label {
+    display: none;
+  }
+  
+
+.menu-button label { display:none; }
+
+@media (max-width: 400px) {
+    .navbar .display-flex {
+      flex-wrap: wrap;
+    }
+    .navbar .nav {
+        width: 100%;
+        display: none;
+      }
+
+    .navbar .nav-flex ul {
+        display: block;
+      }
+    .navbar .nav li {
+      line-height: 2em;
+    }
+
+    .menu-button label {
+        display: block;
+        padding: 0 1em;
+        margin-top: 10px;
+        font-size: 1.5em;
+    } 
+
+    #menu:checked + .navbar .nav{
+        display: block;
+    }
+  }
+
+
+.hidden{
+    display: none;
 }
 
 .table_of {
@@ -220,10 +272,10 @@ figcaption {
     list-style-type: none;
     margin: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #555;
     display: flex;
+    text-align: left;
 }
-
 
 #main_nav {
     display: block;
@@ -237,7 +289,9 @@ figcaption {
     display: block;
     text-align: center;
     font-weight: bold;
-    
+    font-size: 1.5em !important;
+    padding-top: 5px;
+    font-family: 'Poppins', sans-serif !important;
 }
 .flexboxNav {
     display: flex;
