--- a/aaron.washington/css/storetheme.css
+++ b/aaron.washington/css/storetheme.css
@@ -227,7 +227,20 @@ span.badge:not(:empty)::after {
 }
 
 
+
 @media (max-width: 600px) {
+
+    .hero-text h2 {
+        font-size: 2rem;
+    }
+
+    .hero-text h4 {
+        font-size: 1.3rem;
+    }
+
+    .hero-landing {
+        background-image: url('../img/AW-landing-Hero_ForMobile.jpg');
+    }
 
     .card-img:hover {
         background-size: 150%;
@@ -254,6 +267,10 @@ span.badge:not(:empty)::after {
 
 
 @media (max-width: 400px) {
+
+    footer .nav a {
+        padding: 0rem;
+    }
 
     #tableofcontents .card {
         width: 100%;
